--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- Refer to https://bulma.io/documentation/overview/start -->
+    <!-- TODO: Eliminate unused CSS with https://www.purgecss.com/guides/react -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
