--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- Refer to https://bulma.io/documentation/overview/start -->
     <!-- TODO: Eliminate unused CSS with https://www.purgecss.com/guides/react -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js" data-auto-replace-svg="nest"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
