--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- document.title is controlled by react-helmet -->
+    <title>
+      loading...
+    </title>
 
     <!-- Refer to https://bulma.io/documentation/overview/start -->
     <!-- TODO: Eliminate unused CSS with https://www.purgecss.com/guides/react -->
